Tue Jan  9 11:24:32 2001  Nicola Pero  <n.pero@mi.flashnet.it>

	* Tools/Functions.m: Include AppKit/DPSOperators.h so it 
	compiles again.

2001-01-08  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSApplication.m: exception handler - check that graphics
	context exists and if it doesn't, simply log an error 
	rather than trying to rujn an alert panel.

2001-01-08  Fred Kiefer  <FredKiefer@gmx.de>

	* Source/NSColor.m
	In [supportMaxColorSpaces] corrected converions from RGB to HSB.
	* Source/NSFontPanel.m
	[_initWithoutGModel] make the size label non-selectable.
	* Headers/gnustep/gui/GSWraps.h: 
	Removed function GSWSetMatrix().
	
2001-01-08  Fred Kiefer  <FredKiefer@gmx.de>

	* Headers/gnustep/gui/NSAffineTransform.h: 
	* Source/NSAffineTransform.m
	Added new GS methods [concatenateWithMatrix:] and
	[deltaPointInMatrixSpace:] to avoid the creation of a new
	NSAffineTransform in the backend. 
	* Source/NSScroller.m
	[setTarget:] don't retain target to avoid retain cycle in
	NSScrollView. [initWithCoder:] release target after decoding.
	* Source/NSColorWell.m
	In [dealloc] call [deactivate] for active colour wells.
	* Source/NSColorPanel.m
	Better interaction with the current colour picker. [setTarget:]
	don't retain target. In [sharedColorPanel] the picker mode is used
	only to create the panel, not each time the panel is shown. Show
	the alpha value multiplied by 100.
	* Source/NSPageLayout.m
	* Source/NSPrintOperation.m
	Small improvements.
	
Sun Jan  7 03:28:14 2001  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/GSSimpleLayoutManager.m
	([-textStorage:edited:range:changeInLength:invalidatedRange:]),
	([-invalidateLayoutForCharacterRange:isSoft:actualCharacterRange:]):
	Invoke [NSTextView -invalidateTextContainerOrigin].
	* Source/NSLayoutManager.m ([-textContainerChangedTextView:]):
	Implemented.
	* Source/NSTextContainer.m ([-setTextView:]): Call
	[NSLayoutManager -textContainerChangedTextView:] if appropriate;